adds first version of css file

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -3,6 +3,7 @@
     <title>
         Coursera mod2 assignment
     </title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div>
