adds first solution

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div>
-        This page must contain my solution of Coursera mod2 assignment.
+    <h1>Our Menu</h1>
+    <div id="bc">
+        <section id="b">Beef</section>
+        some text ... ...
+    </div>
+    <div id="cc">
+        <section id="c">Chicken</section>
+        some text ... ...
+    </div>
+    <div id="sc">
+        <section id="s">Sushi</section>
+        some text ... ...
     </div>
 </body>
